[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "render_engine_tailwindcss"
version = "2023.1.1a3"
description = "tailwindcss-parser for Render Engine"
readme = "README.md"

dependencies = ["render-engine>=2023.1.3a1", "pytailwindcss"]

[project.optional-dependencies]
dev = ["pytest"]

[tool.setuptools]
package-dir = {"" = "src"}

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_tailwindcss/"
repository = "https://github.com/kjaymiller/render_engine_tailwindcss/"

[tool.pytest.ini_options]
pythonpath = ["src"]
