[build-system]
requires = ["setuptools", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
local_scheme = "no-local-version"

[project]
name = "render_engine_tailwindcss"
dynamic = ["version"]
description = "tailwindcss-parser for Render Engine"
readme = "README.md"

dependencies = ["render-engine[cli]>=2025.11.1", "pytailwindcss"]

[project.optional-dependencies]
test = ["pytest"]
dev = ["pytest"]

[tool.setuptools]
package-dir = { "" = "src" }

[project.urls]
homepage = "https://github.com/kjaymiller/render_engine_tailwindcss/"
repository = "https://github.com/kjaymiller/render_engine_tailwindcss/"

[tool.pytest.ini_options]
pythonpath = ["src"]
